--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </head>
     <body>
         <div class="content">
-            <div class="rack_display">Okay</div>
+            <div class="rack_display"></div>
             <div class="rack_info">good</div>
         </div>
         <!--[if lte IE 9]>
@@ -26,7 +26,7 @@
         <!-- Add your site or application content here -->
         <!--<p>Hello world! This is HTML5 Boilerplate.</p> -->
         <script src="js/vendor/modernizr-3.5.0.min.js"></script>
-        <script src="js/vendor/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+        <script src="js/vendor/jquery-3.2.1.min.js" crossorigin="anonymous"></script>
         <!--<script>window.jQuery || document.write('<script src="js/vendor/jquery-3.2.1.min.js"><\/script>')</script> -->
         <script src="js/vendor/d3.js"></script>
         <script src="js/plugins.js"></script>
