jquesry CDN added

--- a/index.html
+++ b/index.html
@@ -169,14 +169,17 @@
                             <div class="single_rack_middle_section"></div>
                             <div class="single_rack_corner right"></div>
                         </div>
-
-                        <div class="single_rack">
-                            <div class="single_rack_corner"></div>
-                            <div class="single_rack_middle_section"></div>
-                            <div class="single_rack_corner right"></div>
-                        </div>
                     
                     </div>
+
+                    <div class="rack_bottom_section">
+                        <div class="rack_top">
+                            <div class="rack_top_corner_rect"></div>
+                            <div class="rack_top_middle_rect"></div>
+                            <div class="rack_top_corner_rect"></div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
             <div class="rack_info">good</div>
@@ -188,7 +191,7 @@
         <!-- Add your site or application content here -->
         <!--<p>Hello world! This is HTML5 Boilerplate.</p> -->
         <script src="js/vendor/modernizr-3.5.0.min.js"></script>
-        <script src="js/vendor/jquery-3.2.1.min.js" crossorigin="anonymous"></script>
+        <script src="https://cdn.allprobe.com/js/jquery-2.0.0.min.js?187897021" crossorigin="anonymous"></script>
         <!--<script>window.jQuery || document.write('<script src="js/vendor/jquery-3.2.1.min.js"><\/script>')</script> -->
         <script src="js/vendor/d3.js"></script>
         <script src="js/plugins.js"></script>
