central part and json

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
                     </div>
 
                     <div class="rack_body">
-                        
+                        <div class="rack-container-div">
+                            
+                        </div>
                         <div class="single_rack">
                             <div class="first single_rack_corner"></div>
                             <div class="first single_rack_middle_section"></div>
