better simpler rack

--- a/index.html
+++ b/index.html
@@ -25,15 +25,12 @@
                     </div>
 
                     <div class="rack_body">
-                        <div class="rack-container-div">
+                        <!--<div class="rack-container-div">
                             
-                        </div>
-                        <div class="single_rack">
-                            <div class="first single_rack_corner"></div>
-                            <div class="first single_rack_middle_section"></div>
-                            <div class="first single_rack_corner right"></div>
-                        </div>  
-                    
+                        </div> -->
+                        <!--<div class="rack_body_left"></div> -->
+                        <!--<div class="rack_body_middle"></div> -->
+                        <!--<div class="rack_body_right"></div> -->
                     </div>
 
                     <div class="rack_bottom_section">
