--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
         <!--<p>Hello world! This is HTML5 Boilerplate.</p> -->
         <script src="js/vendor/modernizr-3.5.0.min.js"></script>
         <script src="https://cdn.allprobe.com/js/jquery-2.0.0.min.js?187897021" crossorigin="anonymous"></script>
+        <script src="js/vendor/jquery-3.2.1.min.js" crossorigin="anonymous"></script>
+        
         <!--<script>window.jQuery || document.write('<script src="js/vendor/jquery-3.2.1.min.js"><\/script>')</script> -->
         <script src="js/vendor/d3.js"></script>
         <script src="js/plugins.js"></script>
