ip text display and submenu display

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
+        <div class="data_rectangle"></div>
+        <div class="sub_menu_rectangle"></div>
         <div class="content">
             <div class="rack_display">
                 <div class="rack_container">
