change self executing code block to call a method and initiate

--- a/index.html
+++ b/index.html
@@ -73,3 +73,9 @@
 
     </body>
 </html>
+<script>
+    $(function() {
+        // Pass url as a parameter.
+        getJson('data.json');
+    });
+</script>
