code to test why exactly rack no dont align

--- a/code.html
+++ b/code.html
@@ -367,7 +367,7 @@ $(function() {
                             }
                         }
                         if(i === 0 ) {
-                            indexArray[i] = "<div class='individual-server-first-child' style='border-bottom:none;" + colorText + "'>" + ( running ) + "</div>";
+                            indexArray[i] = "<div class='individual-server-first-child' style='border-bottom:none;" + colorText + "'><span class='rack_no'>" + ( running ) + "</span></div>";
                         } else {
                             indexArray[i] = "<div class='individual-server-first-child' style='"+ colorText +"'>" + ( running ) + "</div>";
                         }
