update for index in the left

--- a/code.html
+++ b/code.html
@@ -216,6 +216,12 @@
     width: 100%;
     height: 13px;
     border-bottom: 1px solid white;
+    position: relative;
+}
+
+.rack_no {
+    position: relative;
+    top: -2px;
 }
 
 .individual-server-second {
