--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
         <!--<script>window.jQuery || document.write('<script src="js/vendor/jquery-3.2.1.min.js"><\/script>')</script> -->
         <script src="js/vendor/d3.js"></script>
         <script src="js/plugins.js"></script>
+        <script src="allprobe.rack.widget.js"></script>
         <script src="js/main.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID.
