host disk start

--- a/code.html
+++ b/code.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Rack</title>
+       
     </head>
     <body>
         <!--Copy code HTML from here -->
@@ -20,6 +21,7 @@
         <!--<script src="https://cdn.allprobe.com/js/jquery-2.0.0.min.js?187897021" crossorigin="anonymous"></script> -->
         <script src="js/vendor/jquery-3.2.1.min.js"></script>
         <script src="js/vendor/jquery-ui.js"></script>
+        <script src="js/vendor/bootstrap.min.js"></script>
         <script src="allprobe.rack.widget.js"></script>
     </body>
 </html>
