live change in rows

--- a/host_disk.html
+++ b/host_disk.html
@@ -94,6 +94,20 @@
         padding-top: 30px;
     }
 
+    .disk-container {
+        width: 101px;
+        border: 1px solid black;
+    }
+    .disk {
+        width: 100px;
+        height: 20px;
+        border-bottom: 1px solid black;
+
+    }
+    .front-and-back {
+        width: 50%;
+        float: left;
+    }
     .live_disk {
 
     }
