--- a/host_disk.html
+++ b/host_disk.html
@@ -108,6 +108,11 @@
         width: 50%;
         float: left;
     }
+
+    .menu-reference {
+        position: relative;
+    }
+    
     .live_disk {
 
     }
