add disk woeks , graphics and datastructure

--- a/host_disk.html
+++ b/host_disk.html
@@ -109,11 +109,25 @@
         width: 50%;
         float: left;
     }
+    .row-selected-button-container {
+        margin-top: 50px;
+    }
 
     .menu-reference {
         position: relative;
     }
     
+    .single-disk {
+        width:6px;
+        height: 12px;
+        margin: 1px;
+        background-color: burlywood;
+        float: left;
+    }
+
+    .active-row {
+        background-color: lightblue;
+    }
     .live_disk {
 
     }
