--- a/host_disk.html
+++ b/host_disk.html
@@ -128,6 +128,10 @@
     .active-row {
         background-color: lightblue;
     }
+
+    .disk-editing {
+        margin: 30px;
+    }
     .live_disk {
 
     }
