okay second page css done, lot of optimization, moving to saving data

--- a/host_disk.html
+++ b/host_disk.html
@@ -131,6 +131,13 @@
     }
     .button-container {
         padding-right: 20px;
+        padding-left: 20px;
+    }
+
+    .action-col {
+        width: 240px;
+        height: 240px;
+        float: left;
     }
 
     .btn {
@@ -189,6 +196,28 @@
 
     .disk-editing {
         margin: 30px;
+    }
+
+    .edit-disk-values {
+        font-size: 12px;
+        font-weight: 300;
+    }
+
+    .item-left {
+        width: 50%;
+        float: left;
+        margin-bottom: 12px;
+    }
+
+    .item-right {
+        width: 50%;
+        float: right;
+        margin-bottom: 12px;
+    }
+
+    .divide {
+        float: left;
+        width: 49%;
     }
     .live_disk {
 
