values are shown in the firlds , moving to auto save on change

--- a/host_disk.html
+++ b/host_disk.html
@@ -208,7 +208,9 @@
         float: left;
         margin-bottom: 12px;
     }
-
+    .active-disk {
+        background-color: red;
+    }
     .item-right {
         width: 50%;
         float: right;
