--- a/host_disk.html
+++ b/host_disk.html
@@ -217,6 +217,14 @@
         margin-bottom: 12px;
     }
 
+    .text-content {
+        width: 100%;
+        height: 250px;
+        font-size: 16px;
+        font-weight: 600;
+        line-height: 16;
+        text-align: center;
+    }
     .divide {
         float: left;
         width: 49%;
