default values at first stage

--- a/host_disk.html
+++ b/host_disk.html
@@ -99,6 +99,7 @@
 
     .first-step-input {
         margin-bottom: 25px;
+        width: 100px;
     }
     .previous {
         float: left;
@@ -228,6 +229,9 @@
     .divide {
         float: left;
         width: 49%;
+    }
+    .first-setion-fieldset {
+        width: 150px;
     }
     .live_disk {
 
