--- a/host_disk.html
+++ b/host_disk.html
@@ -133,6 +133,7 @@
     .button-container {
         padding-right: 20px;
         padding-left: 20px;
+        padding-top: 20px;
     }
 
     .action-col {
