volumes can be created, css update

--- a/host_disk.html
+++ b/host_disk.html
@@ -145,6 +145,11 @@
     .btn {
         font-size: 12px;
     }
+
+    .create-volume-button {
+        margin-left: 5px;
+    }
+
     .auto-disks {
         width: 245px;
         height: 240px;
@@ -161,13 +166,13 @@
     }
 
     .disk-container {
-        width: 101px;
+        width: 102px;
         border: .05em solid black;
         border-bottom: none;
     }
 
     .disk {
-        width: 100px;
+        width: 101px;
         height: 15px;
         border-bottom: .05em solid black;
 
