volumes in different color, disks are assigned to volume

--- a/host_disk.html
+++ b/host_disk.html
@@ -216,7 +216,8 @@
         margin-bottom: 12px;
     }
     .active-disk {
-        background-color: red;
+       
+        box-shadow: 2px 2px 2px 0px rgba(0,0,0,0.75);
     }
     .item-right {
         width: 50%;
