create volume section in wizard with , volume listing

--- a/host_disk.html
+++ b/host_disk.html
@@ -290,6 +290,14 @@
         width: 100%;
         height: 340px;
     }
+
+    .select-box-volume {
+        width: 200px;
+        height: 200px;
+        margin-top: 49px;
+        margin-left: 40px;
+        overflow: scroll;
+    }
 </style>
 
 <script>
