select and edit volume

--- a/host_disk.html
+++ b/host_disk.html
@@ -298,6 +298,11 @@
         margin-left: 40px;
         overflow: scroll;
     }
+
+    .delete-volume-button {
+        margin-left: 4px;
+    }
+
 </style>
 
 <script>
