--- a/host_disk.html
+++ b/host_disk.html
@@ -303,6 +303,21 @@
         margin-left: 4px;
     }
 
+    .volume-field {
+        width: 385px;
+    }
+
+    #deleteVolume {
+        margin-left: 5px;
+    }
+
+    .volume-message {
+        width: 100%;
+        height: 40px;
+        text-align: center;
+        font-weight: 600;
+    }
+
 </style>
 
 <script>
