--- a/host_disk.html
+++ b/host_disk.html
@@ -264,20 +264,20 @@
 
     }
 
-    .second-step-container .disk-container {
+    .disk-step-container .disk-container {
         width: 181px;
         border: 1px solid black;
         border-bottom: none;
     }
 
-    .second-step-container .disk {
+    .disk-step-container .disk {
         width: 179px;
         height: 25px;
         border-bottom: 1px solid black;
 
     }
 
-    .second-step-container .fields {
+    .disk-step-container .fields {
 
         padding-top: 10px;
         position: relative;
@@ -286,7 +286,7 @@
         padding-left: 10px;
         padding-top: 5px;
     }
-    .second-step-container .field-container {
+    .disk-step-container .field-container {
         width: 100%;
         height: 340px;
     }
