volume section button alignment correction

--- a/host_disk.html
+++ b/host_disk.html
@@ -318,6 +318,10 @@
         font-weight: 600;
     }
 
+    .create-volume-button-container {
+        margin-top: 51px;
+    }
+
 </style>
 
 <script>
