--- a/host_disk/index.html
+++ b/host_disk/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Host Disk</title>
-        <link rel="stylesheet" href="./css/bootstrap.min.css"></style>
+        <link rel="stylesheet" href="../css/bootstrap.min.css"></style>
     </head>
     <body>
         <!--Copy code HTML from here -->
@@ -55,10 +55,10 @@
         </div>
         <!-- This should be gone; I add it here so that it works here in local.-->
         <!--<script src="https://cdn.allprobe.com/js/jquery-2.0.0.min.js?187897021" crossorigin="anonymous"></script> -->
-        <script src="js/vendor/jquery-3.2.1.min.js"></script>
-        <script src="js/vendor/jquery-ui.js"></script>
-        <script src="js/vendor/bootstrap.min.js"></script>
-        <script src="allprobe.host_disk.widget.js"></script>
+        <script src="../js/vendor/jquery-3.2.1.min.js"></script>
+        <script src="../js/vendor/jquery-ui.js"></script>
+        <script src="../js/vendor/bootstrap.min.js"></script>
+        <script src="./allprobe.host_disk.widget.js"></script>
     </body>
 </html>
 
