--- a/host_disk/index.html
+++ b/host_disk/index.html
@@ -328,7 +328,11 @@
 
     $(function() {
 
-        $(".host_disk_wizard_container").hostDisk();
+        $(".host_disk_wizard_container").hostDisk(
+            {
+                data:{"front":[[{"disk_index":"0","size_type":"2.5","type":"SAS","rpm":"10k","extra":"","volume":"none"},{"disk_index":"0","size_type":"2.5","type":"SAS","rpm":"10k","extra":"","volume":"none"}],[],[],[{"disk_index":"0","size_type":"2.5","type":"SAS","rpm":"10k","extra":"","volume":"none"},{"disk_index":"0","size_type":"2.5","type":"SAS","rpm":"10k","extra":"","volume":"none"},{"disk_index":"0","size_type":"2.5","type":"SAS","rpm":"10k","extra":"","volume":"0"},{"disk_index":"0","size_type":"2.5","type":"SAS","rpm":"10k","extra":"","volume":"none"}],[],[],[],[],[],[{"disk_index":"0","size_type":"2.5","type":"SAS","rpm":"10k","extra":"","volume":"none"},{"disk_index":"0","size_type":"2.5","type":"SAS","rpm":"10k","extra":"","volume":"none"},{"disk_index":"0","size_type":"2.5","type":"SAS","rpm":"10k","extra":"","volume":"none"},{"disk_index":"0","size_type":"2.5","type":"SAS","rpm":"10k","extra":"","volume":"none"}]],"back":[[{"disk_index":"0","size_type":"2.5","type":"SAS","rpm":"10k","extra":"","volume":"none"},{"disk_index":"0","size_type":"2.5","type":"SAS","rpm":"10k","extra":"","volume":"none"},{"disk_index":"0","size_type":"2.5","type":"SAS","rpm":"10k","extra":"","volume":"none"},{"disk_index":"0","size_type":"2.5","type":"SAS","rpm":"10k","extra":"","volume":"none"}],[],[],[],[],[{"disk_index":"0","size_type":"2.5","type":"SAS","rpm":"10k","extra":"","volume":"none"},{"disk_index":"0","size_type":"2.5","type":"SAS","rpm":"10k","extra":"","volume":"0"}],[],[],[],[{"disk_index":"0","size_type":"2.5","type":"SAS","rpm":"10k","extra":"","volume":"none"},{"disk_index":"0","size_type":"2.5","type":"SAS","rpm":"10k","extra":"","volume":"none"},{"disk_index":"0","size_type":"2.5","type":"SAS","rpm":"10k","extra":"","volume":"none"}]],"volume":[{"index":0,"name":"Volume(0)","type":"raid0","color":"#28d34c"}]}  
+            }
+        );
 
     });
     
