check for empty object in init

--- a/host_disk/index.html
+++ b/host_disk/index.html
@@ -59,7 +59,7 @@
         <script src="https://cdn.allprobe.com/js/jquery-ui/jquery-ui.min.js"></script>
         
         <script src="https://cdn.allprobe.com/js/bootstrap.min.js"></script>
-        <script src="https://cdn.allprobe.com/js/allprobe.host_disk.widget.js"></script>
+        <script src="./allprobe.host_disk.widget.js"></script>
     </body>
 </html>
 
@@ -331,8 +331,9 @@
 
         $(".host_disk_wizard_container").hostDisk(
             {
-                data:{"front":[[{"disk_index":"0","size_type":"2.5","type":"SAS","rpm":"10k","extra":"","volume":"none"},{"disk_index":"0","size_type":"2.5","type":"SAS","rpm":"10k","extra":"","volume":"none"}],[],[],[{"disk_index":"0","size_type":"2.5","type":"SAS","rpm":"10k","extra":"","volume":"none"},{"disk_index":"0","size_type":"2.5","type":"SAS","rpm":"10k","extra":"","volume":"none"},{"disk_index":"0","size_type":"2.5","type":"SAS","rpm":"10k","extra":"","volume":"0"},{"disk_index":"0","size_type":"2.5","type":"SAS","rpm":"10k","extra":"","volume":"none"}],[],[],[],[],[],[{"disk_index":"0","size_type":"2.5","type":"SAS","rpm":"10k","extra":"","volume":"none"},{"disk_index":"0","size_type":"2.5","type":"SAS","rpm":"10k","extra":"","volume":"none"},{"disk_index":"0","size_type":"2.5","type":"SAS","rpm":"10k","extra":"","volume":"none"},{"disk_index":"0","size_type":"2.5","type":"SAS","rpm":"10k","extra":"","volume":"none"}]],"back":[[{"disk_index":"0","size_type":"2.5","type":"SAS","rpm":"10k","extra":"","volume":"none"},{"disk_index":"0","size_type":"2.5","type":"SAS","rpm":"10k","extra":"","volume":"none"},{"disk_index":"0","size_type":"2.5","type":"SAS","rpm":"10k","extra":"","volume":"none"},{"disk_index":"0","size_type":"2.5","type":"SAS","rpm":"10k","extra":"","volume":"none"}],[],[],[],[],[{"disk_index":"0","size_type":"2.5","type":"SAS","rpm":"10k","extra":"","volume":"none"},{"disk_index":"0","size_type":"2.5","type":"SAS","rpm":"10k","extra":"","volume":"0"}],[],[],[],[{"disk_index":"0","size_type":"2.5","type":"SAS","rpm":"10k","extra":"","volume":"none"},{"disk_index":"0","size_type":"2.5","type":"SAS","rpm":"10k","extra":"","volume":"none"},{"disk_index":"0","size_type":"2.5","type":"SAS","rpm":"10k","extra":"","volume":"none"}]],"volume":[{"index":0,"name":"Volume(0)","type":"raid0","color":"#28d34c"}]}  
-            }
+                data:{ }
+
+                }
         );
 
     });
