new disj type added

--- a/host_disk/index.html
+++ b/host_disk/index.html
@@ -331,9 +331,8 @@
 
         $(".host_disk_wizard_container").hostDisk(
             {
-                data:{ }
-
-                }
+                data:{"front":[[{"disk_index":"0","size_type":"2.5","type":"SAS","rpm":"10k","extra":"","volume":"none"},{"disk_index":"0","size_type":"2.5","type":"SAS","rpm":"10k","extra":"","volume":"none"}],[],[],[{"disk_index":"0","size_type":"2.5","type":"SAS","rpm":"10k","extra":"","volume":"none"},{"disk_index":"0","size_type":"2.5","type":"SAS","rpm":"10k","extra":"","volume":"none"},{"disk_index":"0","size_type":"2.5","type":"SAS","rpm":"10k","extra":"","volume":"0"},{"disk_index":"0","size_type":"2.5","type":"SAS","rpm":"10k","extra":"","volume":"none"}],[],[],[],[],[],[{"disk_index":"0","size_type":"2.5","type":"SAS","rpm":"10k","extra":"","volume":"none"},{"disk_index":"0","size_type":"2.5","type":"SAS","rpm":"10k","extra":"","volume":"none"},{"disk_index":"0","size_type":"2.5","type":"SAS","rpm":"10k","extra":"","volume":"none"},{"disk_index":"0","size_type":"2.5","type":"SAS","rpm":"10k","extra":"","volume":"none"}]],"back":[[{"disk_index":"0","size_type":"2.5","type":"SAS","rpm":"10k","extra":"","volume":"none"},{"disk_index":"0","size_type":"2.5","type":"SAS","rpm":"10k","extra":"","volume":"none"},{"disk_index":"0","size_type":"2.5","type":"SAS","rpm":"10k","extra":"","volume":"none"},{"disk_index":"0","size_type":"2.5","type":"SAS","rpm":"10k","extra":"","volume":"none"}],[],[],[],[],[{"disk_index":"0","size_type":"2.5","type":"SAS","rpm":"10k","extra":"","volume":"none"},{"disk_index":"0","size_type":"2.5","type":"SAS","rpm":"10k","extra":"","volume":"0"}],[],[],[],[{"disk_index":"0","size_type":"2.5","type":"SAS","rpm":"10k","extra":"","volume":"none"},{"disk_index":"0","size_type":"2.5","type":"SAS","rpm":"10k","extra":"","volume":"none"},{"disk_index":"0","size_type":"2.5","type":"SAS","rpm":"10k","extra":"","volume":"none"}]],"volume":[{"index":0,"name":"Volume(0)","type":"raid0","color":"#28d34c"}]}  
+            }
         );
 
     });
