slight css update for text box

--- a/host_disk/index.html
+++ b/host_disk/index.html
@@ -60,7 +60,7 @@
         <script src="https://cdn.allprobe.com/js/jquery-ui/jquery-ui.min.js"></script>
         
         <script src="https://cdn.allprobe.com/js/bootstrap.min.js"></script>
-        <script src="https://cdn.allprobe.com/js/allprobe.host_disk.widget.js"></script>
+        <script src="./allprobe.host_disk.widget.js"></script>
     </body>
 </html>
 
@@ -324,6 +324,10 @@
 
     .create-volume-button-container {
         margin-top: 51px;
+    }
+
+    #extra_text {
+        width: 160px;
     }
 
 </style>
