--- a/host_disk/index.html
+++ b/host_disk/index.html
@@ -219,7 +219,7 @@
 
     .item-left {
         width: 50%;
-        height: 40px;
+        height: 30px;
         float: left;
     }
     .item-left-special {
@@ -235,7 +235,7 @@
     .item-right {
         width: 50%;
         float: right;
-        height: 40px;
+        height: 30px;
     }
 
     .item-right-special {
@@ -329,6 +329,12 @@
     #extra_text {
         width: 160px;
     }
+
+    .gb-input {
+        width: 60px;
+    }
+
+    
 
 </style>
 
